--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Site/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap">
-  <link rel="icon" href="./images/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="/assets/img/favicon-32x32.png" type="image/png" sizes="32x32">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
   <section class="container">
     <div class="cards">
       <div class="card1">
-        <img src="/Site/assets/img/image-qr-code.png" alt="QR code">
+        <img src="assets/img/image-qr-code.png" alt="QR code">
       </div>
       <div class="card2">
         <h1>Improve your front-end skills by building projects</h1>
