--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +11,18 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <section class="container">
-    <div class="cards">
-      <div class="card1">
-        <img src="assets/img/image-qr-code.png" alt="QR code">
+  <main>
+    <section class="container">
+      <div class="cards">
+        <div class="card1">
+          <img src="assets/img/image-qr-code.png" alt="QR code">
+        </div>
+        <div class="card2">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>San the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
       </div>
-      <div class="card2">
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>San the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>
-    </div>
-  </section>
+    </section>
+  </main>
 </body>
 </html>
